<?xml version="1.0"?>
<package>
  <name>hector_slam_example</name>
  <version>0.0.1</version>
  <description>Sample nodes for hector_slam with openni and URG.</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="d.maekawa@rapyuta-robotics.com">Daiki Maekawa</maintainer>
  <maintainer email="yoneken@ieee.org">Kenta Yonekura</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <url type="website">https://github.com/DaikiMaekawa/hector-slam-example</url>


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <author email="method_aspect_card@yahoo.co.jp">Daiki Maekawa</author>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>hector_mapping</run_depend>
  <run_depend>hector_geotiff</run_depend>
  <run_depend>hector_trajectory_server</run_depend>
  <run_depend>hector_geotiff_plugins</run_depend>
  <run_depend>hokuyo_node</run_depend>
  <run_depend>urg_node</run_depend>
  <run_depend>depthimage_to_laserscan</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>rviz</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
